# ChangeLog for dev-perl/Archive-Tar
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Archive-Tar/ChangeLog,v 1.89 2008/03/19 02:37:59 jer Exp $

  19 Mar 2008; Jeroen Roovers <jer@gentoo.org> Archive-Tar-1.32.ebuild:
  Stable for HPPA too.

*Archive-Tar-1.38 (29 Feb 2008)

  29 Feb 2008; Christian Hartmann <ian@gentoo.org> +Archive-Tar-1.38.ebuild:
  Version bump

  29 Dec 2007; <welp@gentoo.org> Archive-Tar-1.32.ebuild:
  Keyworded ~sparc-fbsd; bug 203655

  10 Nov 2007; Samuli Suominen <drac@gentoo.org> Archive-Tar-1.32.ebuild:
  amd64 stable

  09 Aug 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  Archive-Tar-1.32.ebuild:
  Stable on ppc.

  01 Aug 2007; Joshua Kinard <kumba@gentoo.org> Archive-Tar-1.32.ebuild:
  Stable on mips.

  22 Jul 2007; Tom Gall <tgall@gentoo.org> Archive-Tar-1.32.ebuild:
  stable on ppc64

  09 Jul 2007; Michael Cummings <mcummings@gentoo.org>
  Archive-Tar-1.32.ebuild:
  Marking sparc stable

  05 Jul 2007; Raúl Porcel <armin76@gentoo.org> Archive-Tar-1.32.ebuild:
  alpha/ia64/x86 stable

  04 Jul 2007; Tom Gall <tgall@gentoo.org> Archive-Tar-1.31.ebuild:
  stable on ppc64

  30 Jun 2007; Joshua Kinard <kumba@gentoo.org> Archive-Tar-1.31.ebuild:
  Stable on mips.

  25 Jun 2007; Michael Cummings <mcummings@gentoo.org>
  Archive-Tar-1.31.ebuild:
  Marking sparc stable

*Archive-Tar-1.32 (04 Jun 2007)

  04 Jun 2007; Michael Cummings <mcummings@gentoo.org>
  +Archive-Tar-1.32.ebuild:
  Version bump

*Archive-Tar-1.31 (24 May 2007)

  24 May 2007; Michael Cummings <mcummings@gentoo.org>
  +Archive-Tar-1.31.ebuild:
  Version bump

  12 May 2007; Joshua Kinard <kumba@gentoo.org> Archive-Tar-1.30.ebuild:
  Stable on mips.

  05 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  Archive-Tar-1.30.ebuild:
  ppc stable

  15 Apr 2007; Markus Rothe <corsair@gentoo.org> Archive-Tar-1.30.ebuild:
  Stable on ppc64
