@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST Archive-Tar-1.28.tar.gz 36150 RMD160 3bc4fe1a095a5ab67ab8526bcbadc7a8d912d93e SHA1 c2f161b6a4158c8b280138db0fbb9d9ed8120af0 SHA256 0078d241b9eb10bee38593fc6630412590eeaee70e6e93eaa2117ff71cdfede4
 DIST Archive-Tar-1.29.tar.gz 38317 RMD160 27641d90cf9149baf97591fc9889e01f667389b4 SHA1 b2a0d244ee30e19c2800ce5d38f5f0006318856e SHA256 88862934fdebd9c0b22a68e1fe9fbab544b2b8b685b344bc571e3d87653fa816
 DIST Archive-Tar-1.30.tar.gz 39749 RMD160 623d13c458676c0d50e389d3e251c6b10a34066b SHA1 fb91a7249dc149bda05754d1c21b2e2321943485 SHA256 c456d5c73a57a567440bca5c138a549a21637aa2e4049228b5ba63cf68d75a1a
@@ -8,7 +11,14 @@ EBUILD Archive-Tar-1.28.ebuild 650 RMD160 39c7444c015e8fd4e7471238df98ccace34d30
 EBUILD Archive-Tar-1.29.ebuild 662 RMD160 f62d243e1a98a74932dbf633e4b4af8203bd093f SHA1 626cbb9325ff606df1be2e8dc136ac429206fee7 SHA256 40649676d355c01982555c1a24ce5209d5e701e9236c52157cfe70e6213801f3
 EBUILD Archive-Tar-1.30.ebuild 661 RMD160 5d6d28705ac381269b748789884a1b4a6d7438e6 SHA1 4ec68d1c9c2352c34274825abe86d2175fb910ee SHA256 a168d2371b4533519cf0c7734eaf3d1451c5382c881d83aa13fcd08a3197f8f4
 EBUILD Archive-Tar-1.31.ebuild 669 RMD160 7f40b904500532d93c280ac121ed76bafd0b509b SHA1 752d3ec53a2f3709fa0c5a2866cf7734e4ef6405 SHA256 57a2be8254dc9a2cd3b4937aac78e2763a2163dfaaa92a4c358a60c83a3c68f6
-EBUILD Archive-Tar-1.32.ebuild 672 RMD160 8073b00c188760356358e895040b85680ad1d8c1 SHA1 d2818c9217b4999d41cc0b20b7b1c421f5a596ce SHA256 bffbdcda2fdf91b2dda2312a68e7811a33e19dcd314748f4815a6f9385c7bc00
-EBUILD Archive-Tar-1.38.ebuild 684 RMD160 d31d0693b4a42a198de5d4ceee0ab3ee3e5c7d45 SHA1 5ecd73f6dbc06da7b110883016f8e9fb9ae27cc5 SHA256 22b6a141b173186b90d813b9e16c055b6ae51edeb4064c4b3609b7dd46a40234
-MISC ChangeLog 10508 RMD160 a93a34e19590c7ad9fb329863d7452b62679e36e SHA1 f2b84bd896254e9d3507fde2797b716e8126ad04 SHA256 be32d855fede946659445de216dfc811329e300db09cab5be5ec7a8ca84f8933
+EBUILD Archive-Tar-1.32.ebuild 639 RMD160 2f4a95f7284d08bc88fb3e1924f9c10a25821e3b SHA1 e6cb57b7a66cc515572c731ec9fca047dfa7d6fb SHA256 d6c6190ea513fe1786191bde1ff389b13ad756a7bb0f1d6a2cc7f1f667ed225c
+EBUILD Archive-Tar-1.38.ebuild 651 RMD160 434916b91a64464773e5e5c16fc165b47cee7253 SHA1 f44b0a7170cd161ae9dc9239fa94a09099609ba9 SHA256 0603f06b96200006e79ce8c070c8a3fb4232978776a323313e399b9c4d454aae
+MISC ChangeLog 10674 RMD160 4b5fe271975b22225e54144c54a559195a71059d SHA1 398e8646950d4a3088695df8d038c45601d45779 SHA256 84bc6935c962184e9bdc5126da53b6302357f2a467e8b8f97929cfb5cd71658f
 MISC metadata.xml 305 RMD160 647980838c590f54441a053916ea629e53e551c0 SHA1 99ef1deeae9a934fb6e46cf5fc4a5fcb8379a74a SHA256 f05dbef15061919972882cab07057e102760a542beba17d131194091401cd7ca
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.9 (GNU/Linux)
+
+iEYEARECAAYFAkgkaSMACgkQV3J2n04EauwCAACfYbW4p98T7OXo4zDTdkZzdpcm
+bvIAnjpi25tWSVU8nq/GlTLiUUiVj3Ad
+=gpk8
+-----END PGP SIGNATURE-----
